mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_self_common.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot use 'self' in a common method
--> test_scripts/error_cases/semantic_self_common.mux:4:5
   |
 4 |     self.x
   |     ^^^^
   |
= help: Common (static) methods do not have access to 'self'. Remove the 'common' modifier or access the class through a parameter instead.
